# atlas-schema

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  tbump.toml
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml
.github/workflows/: cd.yml  ci.yml  semantic-pr-check.yml
docs/: api.md  api.rst  conf.py  faq.rst  history.md  index.md
docs/_templates/autosummary/: class.rst
src/atlas/: __init__.py  enums.py  methods.py  schema.py  typing_compat.py
src/atlas_schema/: __init__.py  enums.py  methods.py  schema.py  transforms.py  typing_compat.py  utils.py
tests/: test_coverage.py  test_enums.py  test_package.py  test_schema.py  test_systematics.py  test_utils.py  test_vector_fields.py
tests/helpers/: __init__.py
