[build-system]
requires = ["hatchling>=0.7", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "atlas-schema"
authors = [
  { name = "Giordon Stark", email = "kratsg@gmail.com" },
]
description = "Helper python package for ATLAS Common NTuple Analysis work."
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dynamic = ["version"]
dependencies = ["coffea[dask] >= 2024.4.1", "particle >= 0.25.0"]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
  "tbump>=6.7.0",
  "pylint",
  "build",
  "twine",

]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx-copybutton>=0.3.2,!=0.5.1",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
  "sphinx-click",
  "ipywidgets",
  "intersphinx_registry>=0.2411.17",
  "sphinx-issues",
]

[project.urls]
Homepage = "https://github.com/scipp-atlas/atlas-schema"
"Bug Tracker" = "https://github.com/scipp-atlas/atlas-schema/issues"
Discussions = "https://github.com/scipp-atlas/atlas-schema/discussions"
Changelog = "https://github.com/scipp-atlas/atlas-schema/releases"


[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/atlas_schema/_version.py"

[tool.hatch.envs.default]
installer = "uv"
features = ["test"]
scripts.test = "pytest -ra {args}"
scripts.tag = "tbump {args}"
scripts.lint = "pylint src"
scripts.build = "python -m build"
scripts.validate = "twine check dist/*"
# https://github.com/linkchecker/linkchecker/issues/678
scripts.build-check = [
  "build",
  "validate",
]

[tool.hatch.build.targets.sdist]
# hatchling always includes:
# pyproject.toml, .gitignore, any README, any LICENSE, AUTHORS
only-include = [
    "/src"
]
exclude = []

[tool.hatch.build.targets.wheel]
packages = ["src/atlas_schema"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--showlocals",
  "--strict-markers",
  "--strict-config",
  "--doctest-modules",
  "--doctest-glob=*.rst",
  "--cov",
  "--cov-report=xml",
  "--cov-report=term",
  "--durations=20",
  "--ignore=docs/conf.py",
]
xfail_strict = true
filterwarnings = [
  "error",
]
log_cli_level = "INFO"
testpaths = [
  "tests",
  "docs",
]

[tool.coverage]
run.source = ["atlas_schema"]
report.exclude_also = [
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
mypy_path = ["src"]
files = ["src", "tests"]
python_version = "3.9"
warn_unused_configs = true
strict = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_redundant_casts = true
plugins = []

[[tool.mypy.overrides]]
module = "atlas_schema.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
  'awkward.*',
  'coffea.*',
  'dask_awkward.*',
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
  'atlas_schema.methods.*',
]
ignore_errors = true


[tool.ruff]
src = ["src"]

[tool.ruff.lint]
extend-select = [
  "B",        # flake8-bugbear
  "I",        # isort
  "ARG",      # flake8-unused-arguments
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "ICN",      # flake8-import-conventions
  "G",        # flake8-logging-format
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
  "EXE",      # flake8-executable
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "ISC001",   # Conflicts with formatter
]
isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
typing-modules = ["atlas_schema.typing_compat"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"noxfile.py" = ["T20"]


[tool.pylint]
py-version = "3.9"
ignore-paths = [".*/_version.py"]
reports.output-format = "colorized"
similarities.ignore-imports = "yes"
messages_control.disable = [
  "design",
  "fixme",
  "line-too-long",
  "missing-module-docstring",
  "missing-function-docstring",
  "wrong-import-position",
  "invalid-name",
]
